<?xml version="1.0"?>
<package format="2">
  <name>pacmod4</name>
  <version>1.0.0</version>
  <description>AutonomouStuff PACMod v4 Driver Package</description>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/pacmod4</url>
  <url type="repository">https://github.com/astuff/pacmod4</url>
  <url type="bugtracker">https://github.com/astuff/pacmod4/issues</url>

  <maintainer email="software@autonomoustuff.com">AutonomouStuff Software Team</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend version_eq="1.0.0">pacmod4_msgs</depend>
  <depend>can_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
